# perfect-print

./: Cargo.toml  LICENSE  README.md
crates/perfect-print/: Cargo.toml
crates/perfect-print-backend-linux/: Cargo.toml
crates/perfect-print-backend-linux/src/: lib.rs
crates/perfect-print-backend-macos/: Cargo.toml  build.rs
crates/perfect-print-backend-macos/src/: lib.rs  native_print.m
crates/perfect-print-backend-windows/: Cargo.toml
crates/perfect-print-backend-windows/examples/: print_to_pdf_smoke_test.rs
crates/perfect-print-backend-windows/src/: lib.rs
crates/perfect-print-barcode/: Cargo.toml
crates/perfect-print-barcode/src/: lib.rs
crates/perfect-print-cli/: Cargo.toml
crates/perfect-print-cli/src/: diff.rs  geometry.rs  golden.rs  lib.rs  main.rs
crates/perfect-print-cli/src/snapshots/: perfect_print_cli__golden__mixed.snap  perfect_print_cli__golden__mixed.snapsnap
crates/perfect-print-core/: Cargo.toml
crates/perfect-print-core/src/: color.rs  document.rs  draw.rs  error.rs  font.rs  image.rs  lib.rs  page.rs  resource.rs  units.rs
crates/perfect-print-dialog/: Cargo.toml
crates/perfect-print-dialog/src/: lib.rs
crates/perfect-print-egui/: Cargo.toml
crates/perfect-print-egui/src/: lib.rs
crates/perfect-print-html/: Cargo.toml
crates/perfect-print-html/src/: convert.rs  css.rs  error.rs  lib.rs  policy.rs  readiness.rs  stylesheet.rs
crates/perfect-print-html/tests/: policy.rs  render.rs
crates/perfect-print-iced/: Cargo.toml
crates/perfect-print-iced/src/: lib.rs
crates/perfect-print-integration/: Cargo.toml
crates/perfect-print-integration/src/: lib.rs
crates/perfect-print-layout/: Cargo.toml
crates/perfect-print-layout/src/: flow.rs  font_loader.rs  lib.rs  paragraph.rs  table.rs  text_shaper.rs
crates/perfect-print-pdf/: Cargo.toml
crates/perfect-print-pdf/src/: lib.rs  sfnt.rs
crates/perfect-print-pdf/tests/: ttc_embedding.rs
crates/perfect-print-preview/: Cargo.toml
crates/perfect-print-preview/src/: lib.rs
crates/perfect-print-render/: Cargo.toml
crates/perfect-print-render/src/: lib.rs  raster.rs
crates/perfect-print-tauri/: Cargo.toml
crates/perfect-print-tauri/src/: lib.rs
crates/perfect-print/src/: lib.rs  prelude.rs
docs/: IMPROVEMENT-PLAN.md  adr-0002-print-backends.md  adr-0003-job-tracking.md  api-sketch.md  backend-capabilities.md  html-css-support.md  integration-guide.md  page-model.md  printer-settings.md  wysiwyg-verification.md
docs/research/: adr-0001-rendering-stack.md  rendering-backend-matrix.md
docs/research/pp-proto-cairo/: Cargo.toml
docs/research/pp-proto-cairo/src/: main.rs
docs/research/pp-proto-coretext/: Cargo.toml
docs/research/pp-proto-coretext/src/: main.rs
docs/research/pp-proto-pdf/: Cargo.toml
docs/research/pp-proto-pdf/src/: main.rs
docs/research/pp-proto-shaping/: Cargo.toml
docs/research/pp-proto-shaping/src/: main.rs
docs/superpowers/plans/: 2026-07-21-html-css-compatibility.md  2026-07-22-windows-linux-print-backends.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_barcode.rs  fuzz_document_model_json.rs  fuzz_html_convert.rs  fuzz_pdf_render.rs  fuzz_text_layout.rs
scripts/: create_workspace.py
