[package]
name = "perfect-print-backend-linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Linux CUPS/IPP backend"

[dependencies]
perfect-print-core = { path = "../perfect-print-core" }
perfect-print-pdf = { path = "../perfect-print-pdf" }
perfect-print-dialog = { path = "../perfect-print-dialog" }
log = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
cups-sys = { workspace = true }
