[package]
name = "perfect-print-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Canonical document model, units, pages, layers, draw commands, styles, resources"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
