[package]
name = "perfect-print-egui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "egui integration for perfect-print"

[features]
default = ["egui"]
egui = ["dep:egui", "dep:image"]

[dependencies]
perfect-print-core = { path = "../perfect-print-core" }
perfect-print-render = { path = "../perfect-print-render" }
log = { workspace = true }
egui = { version = "0.29", optional = true }
image = { version = "0.25", optional = true }
