[package]
name = "perfect-print-html"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Browser-grade HTML/CSS rendering for Perfect Print"

[dependencies]
perfect-print-core = { path = "../perfect-print-core" }
thiserror = { workspace = true }
url = "2"

[dev-dependencies]
tempfile = "3"
