[package]
name = "perfect-print-html"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Browser-grade HTML/CSS rendering for Perfect Print"

[dependencies]
perfect-print-core = { path = "../perfect-print-core" }
perfect-print-layout = { path = "../perfect-print-layout" }
perfect-print = { path = "../perfect-print" }
thiserror = { workspace = true }
url = "2"
scraper = "0.20"
ego-tree = "0.6"
image = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
