[package]
name = "perfect-print-integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Integration tests: build → render → parse → verify"

[dependencies]
perfect-print-core = { path = "../perfect-print-core" }
perfect-print-layout = { path = "../perfect-print-layout" }
perfect-print-render = { path = "../perfect-print-render" }
perfect-print-pdf = { path = "../perfect-print-pdf" }
perfect-print-dialog = { path = "../perfect-print-dialog" }
perfect-print = { path = "../perfect-print" }
lopdf = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
