[package]
name = "perfect-print"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Public ergonomic API"

[dependencies]
perfect-print-core = { path = "../perfect-print-core" }
perfect-print-layout = { path = "../perfect-print-layout" }
perfect-print-render = { path = "../perfect-print-render" }
perfect-print-pdf = { path = "../perfect-print-pdf" }
perfect-print-dialog = { path = "../perfect-print-dialog" }
log = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
perfect-print-backend-macos = { path = "../perfect-print-backend-macos" }

[target.'cfg(target_os = "linux")'.dependencies]
perfect-print-backend-linux = { path = "../perfect-print-backend-linux" }

[target.'cfg(target_os = "windows")'.dependencies]
perfect-print-backend-windows = { path = "../perfect-print-backend-windows" }
